multi: add force autoloop endpoint to client for testing
Add endpoint which can tick our autolooper on non-mainnet networks.
