# liquidity/liquidity.go
@@ -453,6 +453,14 @@ func (m *Manager) autoloop(ctx context.Context) error {
 	return nil
 }
 
+// ForceAutoLoop force-ticks our auto-out ticker.
+func (m *Manager) ForceAutoLoop(ctx context.Context) {
+	select {
+	case m.cfg.AutoOutTicker.Force <- m.cfg.Clock.Now():
+	case <-ctx.Done():
+	}
+}
+
 // SuggestSwaps returns a set of swap suggestions based on our current liquidity
 // balance for the set of rules configured for the manager, failing if there are
 // no rules set. It takes an autoOut boolean that indicates whether the
